# kassiber

./: .env.example  .gitignore  AGENTS.md  AGENT_OVERWRITES.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  TODO.md  pyproject.toml
.claude/: settings.json
.claude/commands/: add-exchange.md  gate.md  smoke.md
.codex/: AGENTS.md  config.toml
.codex/agents/: docs-researcher.toml  explorer.toml  reviewer.toml
.github/workflows/: ci.yml  credential-platforms.yml  finalize-signed-release.yml  integration.yml  linux-packaging.yml  live-sync.yml  prerelease-binaries.yml  publish-linux-channels.yml
dev/regtest/: Dockerfile.frigate  LIGHTNING-TODO.md  backend_stack.py  bitcoin-cli.sh  btcpay_seed.py  compose.bitcoin.yml  compose.btcpay.yml  compose.lightning.yml  compose.mempool.yml  lightning-business-bootstrap.sh  lightning-business-plan.py  lightning-business-scenario.sh  lightning-cli-merchant.sh  lightning-common.sh
docs/: austrian-handoff.md  quickstart.md
docs/design/: README.md
docs/exchanges/: README.md  TEMPLATE.md  binance.md  coinbase.md  kraken.md  ledger-live.md  strike.md
docs/plan/: 00-overview.md  01-stack-decision.md  02-core-extraction.md  03-storage-conventions.md  04-desktop-ui.md  05-attachments.md  06-austrian-tax-engine.md  07-austrian-tax-open-questions.md  08-external-document-reconciliation.md  09-source-of-funds.md  10-secret-management.md  11-exit-tax-deemed-disposal.md  12-collateralized-loans.md  13-device-sync.md  14-custody-lineage.md  15-custody-simplification.md  16-custody-ux-north-star.md
docs/reference/: ai.md  backends.md  chain-observers.md  csv-mapping.md  custody-components.md  daemon.md  database-compatibility.md  desktop.md  device-sync.md  homebrew-cask.md  homebrew.md  i18n-glossary.md  i18n.md  imports.md  lightning-opsec.md  linux-packaging-operator-todo.md  linux-packaging.md  logging.md  machine-output.md  operator-broker.md  prerelease-binaries.md  privacy-mirror.md  release-signing.md  tax.md  testing.md
examples/: btcpay-transactions.csv  labels.jsonl  sample-wallet.json
kassiber/: __init__.py  _pdf_common.py  app.py  asset_codes.py  austrian_pdf_report.py  backends.py  build_info.py  command_capabilities.py  daemon.py  daemon_freshness.py  daemon_swap_review.py  daemon_sync_replication.py  db.py  diagnostics.py  egress_ledger.py  envelope.py  errors.py  fingerprints.py  http_client.py  importers.py  log_ring.py  msat.py  pdf_report.py  projects.py  proxy.py  redaction.py  release_verification.py  retry.py  source_funds_pdf_report.py  summary_pdf_report.py  sync_btcpay.py  tax_policy.py  time_utils.py  transfers.py  update_check.py  util.py  wallet_descriptors.py  wallet_security.py  wallet_setup.py
kassiber/ai/: __init__.py  cli_client.py  client.py  contracts.py  model_metadata.py  prompt.py  providers.py  tools.py
kassiber/backup/: __init__.py  age_cli.py  cli.py  pack.py  safe_tar.py
kassiber/cli/: __init__.py  chat.py  command_registry.py  handlers.py  main.py  termrender.py
kassiber/core/: __init__.py  accounts.py  address_scripts.py  attachments.py  audit_package.py  austrian.py  chat_history.py  commercial.py  csv_mapping.py  custody_ai_audit.py  custody_allocations.py  custody_authored_migration.py  custody_component_claims.py  custody_component_planner.py  custody_components.py  custody_evidence.py  custody_filed_reports.py  custody_gap_claims.py  custody_gap_holds.py  custody_gap_reviews.py  custody_gaps.py  custody_journal.py  (+58 more)
scripts/: benchmark-custody-scalability.py  bootstrap-dev-env.sh  build-apt-repository.sh  build-bundled-hourly-rates.py  build-mac-arm64-native-app.sh  build-macos-arm64-app.sh  build-rpm-repository.sh  build_ui_review_gallery.py  capture_ui_previews.py  fetch_blinker_font.sh  generate-source-funds-demo-report.py  install-macos-desktop-cli.sh  integration-harness.sh  kassiber_pyinstaller_entry.py  live-sync-tests.sh  package-cli-deb.sh  package-cli-rpm.sh  package-desktop-rpm.sh  prepare-obs-package.sh  publish-linux-repositories-s3.sh  python_test_shards.py  quality-gate.sh  release_manifest.py  render_aur.py  render_homebrew.py  render_homebrew_cask.py  render_nix.py  scaffold-design-screen.sh  seed-boltz-swaps.sh  seed-fake-wallets.sh  write_build_info.py
tests/: custody_projection_fixtures.py  custody_tax_helpers.py  descriptor_fixtures.py  operator_server_fixture.py  privacy_assertions.py  test_address_scripts.py  test_ai_core.py  test_audit_package.py  test_austrian_classification.py  test_austrian_spekulation_section.py  test_austrian_tax_year.py  test_auth_backoff.py  test_backup_pack.py  test_bdk_observer.py  test_boltz_swap_fixture.py  test_btcpay_commercial_provenance.py  test_build_info.py  test_capital_gains_snapshot_parity.py  test_chain_observation_provenance.py  test_chain_observer.py  test_channel_lifecycle.py  test_ci_shards.py  test_cli_agent_contract.py  test_cli_chat.py  test_cli_entrypoint_smoke.py  test_cli_smoke.py  test_cln_adapter.py  test_command_capabilities.py  test_connection_catalog_drift.py  test_core_lightning_sync.py  test_core_maintenance.py  test_custody_ai_audit.py  test_custody_authored_migration.py  test_custody_component_replication.py  test_custody_component_surfaces.py  test_custody_components.py  test_custody_filed_report_exports.py  test_custody_gap_acceptance.py  test_custody_gap_claims.py  test_custody_gap_lifecycle.py  (+136 more)
ui-macos/: .gitignore  PARITY.md  Package.resolved  Package.swift  README.md
ui-tauri/: .env.example  .gitignore  .npmrc  components.json  eslint.config.js  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts  vitest.setup.ts
ui-tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
ui-tauri/src-tauri/capabilities/: main.json
ui-tauri/src-tauri/icons/: icon-dark.icns  icon.icns
ui-tauri/src-tauri/src/: app_update.rs  lib.rs  main.rs  secret_store.rs  supervisor.rs
ui-tauri/src-tauri/windows/: installer-hooks.nsh  update-path.ps1
ui-tauri/src-tauri/windows/fragments/: cli-path.wxs
(+852 files in other folders)
