[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kassiber"
version = "0.22.4"
description = "Open-source, local-first Bitcoin accounting CLI with wallet buckets and multi-wallet support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "Bitcoin Austria" }
]
dependencies = [
  "cryptography>=42,<47",
  "embit>=0.8.0",
  "rp2 @ git+https://github.com/bitcoinaustria/rp2.git@12ae085ee1eafab1b54596a65ba2f7760d9cb0be",
  "XlsxWriter>=3.2,<4",
  "reportlab>=4.4,<5",
  "sqlcipher3>=0.6.2,<1",
  "pyrage>=1.3,<2",
  "certifi>=2024.7.4",
]

[project.scripts]
kassiber = "kassiber.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["kassiber*"]

[tool.setuptools.package-data]
kassiber = [
  "data/rates/kraken/btc_daily/*.csv",
  "data/rates/kraken/btc_daily/README.md",
]
