[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kassiber"
version = "0.22.55"
description = "Open-source, local-first Bitcoin accounting CLI with wallet buckets and multi-wallet support."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "Bitcoin Austria" }
]
dependencies = [
  "embit>=0.8.0",
  "rp2 @ git+https://github.com/bitcoinaustria/rp2.git@24eeeed5e88d79cedfada9062dbb4fb45f55946c",
  "XlsxWriter>=3.2,<4",
  "openpyxl>=3.1,<4",
  "reportlab>=4.4,<5",
  "sqlcipher3>=0.6.2,<1",
  "pyrage>=1.3,<2",
  "keyring>=25.6,<26",
  "cryptography>=44,<48",
  "spake2==0.9",
  "zeroconf>=0.150,<1",
  "certifi>=2024.7.4",
  "pytest>=8,<9",
]

[project.scripts]
kassiber = "kassiber.cli.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["kassiber*"]

[tool.setuptools.package-data]
kassiber = [
  "ai/skill_references/*.md",
  "data/rates/kraken/btc_daily/*.csv",
  "data/rates/kraken/btc_daily/README.md",
  "data/rates/kraken/btc_hourly/*.csv",
  "data/rates/kraken/btc_hourly/README.md",
]
