[package]
name = "kassiber-ui"
version = "0.22.4"
description = "Kassiber desktop shell"
authors = ["Bitcoin Austria"]
edition = "2021"
rust-version = "1.77"
build = "build.rs"

[lib]
name = "kassiber_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
